Attempting to get work to actually commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(src)
 
 add_executable(armv8_5
         src/assemble/assemble.c
-        src/emulate.c src/assemble/symbol_table.c src/assemble/symbol_table.h src/assemble/reading_source_file.c src/assemble/reading_source_file.h src/assemble/function_decoder.c src/assemble/function_decoder.h src/assemble/enums.c src/assemble/enums.h)
+        src/emulate.c src/assemble/symbol_table.c src/assemble/symbol_table.h src/reading_source_file.c src/reading_source_file.h src/assemble/function_decoder.c src/assemble/function_decoder.h src/assemble/enums.c src/assemble/enums.h)
