trying to get the push to include items in folders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_C_STANDARD 11)
 include_directories(src)
 
 add_executable(armv8_5
-        src/assemble/assemble.c
-        src/emulate.c src/assemble/symbol_table.c src/assemble/symbol_table.h src/reading_source_file.c src/reading_source_file.h src/assemble/function_decoder.c src/assemble/function_decoder.h src/assemble/enums.c src/assemble/enums.h)
+        src/assemble.c
+        src/emulate.c src/symbol_table.c src/symbol_table.h src/reading_source_file.c src/reading_source_file.h src/function_decoder.c src/function_decoder.h src/assemble/enums.c src/assemble/enums.h)
