Commiting all work out of folders. Will ask later in labs if they can help identify the issue.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(src)
 
 add_executable(armv8_5
         src/assemble.c
-        src/emulate.c src/symbol_table.c src/symbol_table.h src/reading_source_file.c src/reading_source_file.h src/function_decoder.c src/function_decoder.h src/assemble/enums.c src/assemble/enums.h)
+        src/emulate.c src/symbol_table.c src/symbol_table.h src/reading_source_file.c src/reading_source_file.h src/function_decoder.c src/function_decoder.h)
