Updated .gitignore to ignore executables

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 
 #ignore junk files from compiling C code
 *.o
-src/emulate
+emulate
 assemble
 
 #ignore junk files from compiling Haskell code
@@ -33,6 +33,7 @@ assemble
 *.nav
 *.toc
 
+#ignore CLion files
 **/cmake-build-debug
 **/CMakeLists.txt
 **/.idea
