--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 
 #ignore junk files from compiling C code
 *.o
-src/emulate
+src/emulator/emulate
 assemble
 
 #ignore junk files from compiling Haskell code
