--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,7 @@
 CC      ?= gcc
 CFLAGS  ?= -std=c17 -g\
 	-D_POSIX_SOURCE -D_DEFAULT_SOURCE\
-	-Wall -Werror #-pedantic
-	-o out
+	-Wall -Werror -pedantic
 
 .SUFFIXES: .c .o
 
@@ -15,4 +14,3 @@ emulate: emulate.o
 
 clean:
 	$(RM) *.o assemble emulate
-	
